--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="container">
-        <form id = "suppliesForm" method = "get" action = "page4.html">
+        <form id = "suppliesForm" type = "get" action = "page4.html">
             <h1>Pack Your Bag</h1>
             <p>Select the supplies you wish to take on your quest. Choose wisely, as you can only carry a limited amount.</p>
             
